--- a/Thankyou.html
+++ b/Thankyou.html
@@ -52,7 +52,7 @@
                     We will contact you soon
                 </p>
                 <p class="Go-back">
-                    <a href="Headerpage.html"><u>Click to go Back</u></a>
+                    <a href="https://kepcethepepce.github.io/Meatylicious.OfficialWebsite/Headerpage.html"><u>Click to go Back</u></a>
                 </p>
 
             </button>
